# repo_linux

./: .gitignore  Cargo.toml  README  home.json
.github/workflows/: update.yml
db/apps/: 86Box.json  AKASHA.json  ANT_Downloader.json  APK_Editor_Studio.json  APhotoToolLibre.json  ARAnyM.json  Addaps.json  Addaps.md.json  Advanced_Rest_Client.json  Agora.json  Agora.md.json  Airspaces.json  Alduin.json  Alpine_Client.json  Altitude.json  Altus.json  An.stop.json  Anchor.json  AnimaShooter.json  AnimaShooter.md.json  Antares.json  AnzeigenChef.json  AnzeigenChef.md.json  Apache_NetBeans.json  Aphelion_Wallet.json  Apla.json  AppImagePool.json  AppImageUpdate.json  App_Outlet.json  Aptakube.json  Aptakube.md.json  ArcadeManager.json  Archipelago.json  Arduino_IDE.json  Ark.Desktop.Wallet.json  Arma_3_Unix_Launcher.json  Armagetron_Advanced.json  Around.json  Around.md.json  Artifact.json  (+5061 more)
db/dev/: 1  fdroid
db/map/: 1.json
db/res/An.stop/: 0
db/res/InfinityLoop1309.NewPipeEnhanced/: 0
db/res/S.N.A.K.E/: 0
db/res/a2dp.Vol/: 0
db/res/ac.mdiq.podcini.X/: 0
db/res/ac.robinson.mediaphone/: 0
db/res/acr.browser.lightning/: 0
db/res/ademar.bitac/: 0
db/res/ademar.textlauncher/: 0
db/res/agersant.polaris/: 0
db/res/agrigolo.chubbyclick/: 0
db/res/agrigolo.opendrummer/: 0
db/res/akk.astro.droid.moonphase/: 0
db/res/allen.town.focus.mastodon/: 0
db/res/allen.town.focus.podcast/: 0
db/res/alt.nainapps.aer/: 0
db/res/app.usp/: 0
db/search/: 1.json
src/: main.rs  parser.rs  regex.rs  structs.rs
src/caching/: mod.rs
src/load/: cnt.rs  mod.rs
(+3161 files in other folders)
