[package]
name = "ahqstore-appimage-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
ahqstore-types = "3"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
